@@ -1,3 +1,6 @@
+2017-11-19 Christina Zeller <chriz@keera.co.uk>:
+        * Adds proper image for diamonds (powerups).
+
 2017-11-18 Christina Zeller <chriz@keera.co.uk>:
         * Adds basics for powerups in SDL1.
 
